# waveform_uncertainty

./: WaveformGeneratorWFU.py  WaveformUncertainty.py  calibration_reweighting (1).py  calibration_reweighting.py  dphi_sampling.py  pyproject.toml  utils.py  waveform_uncertainty.txt
GWCorrect/: WaveformUncertainty.py  __init__.py  ppE.py  utils.py  waveform_generator.py
GWCorrect/WFUN/: parameterization.py
GWCorrect/ppE/: __init__.py  prior.py  utils.py  waveform_generator.py
GWCorrect/wfu/: __init__.py  parameterization.py
WaveformUncertainty/: WaveformUncertainty.py  __init__.py  _init_.py  parameterization.py  ppE.py  ppE_utils.py  prior.py  sampler.py  utils.py  waveform_generator.py
WaveformUncertainty/parameterization/: __init__.py  parameterization.py  utils.py
docs/: requirements.txt
docs/source/: Likelihood_Equation.rst  Q_factor.rst  TotalMassConstraint.rst  WFU_Equations.rst  WFU_Sampling_Tutorial.rst  WFU_dA_prior.rst  WFU_dphi_prior.rst  WFU_prior.rst  WaveformGeneratorWFU.rst  api.rst  conf.py  fd_model_difference.rst  index.rst  injection.rst  installation.rst  maxL.rst  parameter_dict_from_prior.rst  parameterization.rst  parameterization_tutorial.rst  recovery_from_parameterization.rst  uncertainties_from_parameterization.rst  usage.rst  wfu_equations.rst
docs/source/notebooks/: Parameterization_Tutorial.ipynb  Parameterization_and_Waveform_Differences.ipynb  ppE_Tutorial.ipynb  (+2 more)
example/: calibration_reweighting.py
files/: SEOBNRv4T_surrogate_v1.0.0.hdf5  text.txt
submission/: NS1_wfu  NS1_wfu.py  NS1_wfu.sh  WaveformUncertainty.py
(+38 files in other folders)
